cmake_minimum_required(
	VERSION
	2.8.3
)
project(
	clang_pass_tests
)
find_package(
	catkin
	REQUIRED
	COMPONENTS
	roscpp
	std_msgs
)
catkin_package(
	CATKIN_DEPENDS
	roscpp
	std_msgs
)
include_directories(
	${catkin_INCLUDE_DIRS}
)
add_executable(
	call_check
	src/call_check.cpp
	src/instrument.cpp
)
add_executable(
	data_swap1.cpp
	src/data_swap1.cpp
	src/instrument.cpp
)
add_executable(
	data_swap2.cpp
	src/data_swap2.cpp
	src/instrument.cpp
)
add_executable(
	data_swap3.cpp
	src/data_swap3.cpp
	src/instrument.cpp
)
add_executable(
	double_or.cpp
	src/double_or.cpp
	src/instrument.cpp
)
add_executable(
	double_thresh
	src/double_thresh.cpp
	src/instrument.cpp
)
add_executable(
	flag_set
	src/flag_set.cpp
	src/instrument.cpp
)
add_executable(
	func_call
	src/func_call.cpp
	src/instrument.cpp
)
add_executable(
	node_class
	src/node_class.cpp
	src/instrument.cpp
)
target_link_libraries(
	call_check
	${catkin_LIBRARIES}
)
target_link_libraries(
	data_swap1.cpp
	${catkin_LIBRARIES}
)
target_link_libraries(
	data_swap2.cpp
	${catkin_LIBRARIES}
)
target_link_libraries(
	data_swap3.cpp
	${catkin_LIBRARIES}
)
target_link_libraries(
	double_or.cpp
	${catkin_LIBRARIES}
)
target_link_libraries(
	double_thresh
	${catkin_LIBRARIES}
)
target_link_libraries(
	flag_set
	${catkin_LIBRARIES}
)
target_link_libraries(
	func_call
	${catkin_LIBRARIES}
)
target_link_libraries(
	node_class
	${catkin_LIBRARIES}
)
set_target_properties(
	call_check
	PROPERTIES
	COMPILE_FLAGS
	"-g -flto"
	LINK_FLAGS
	"-flto"
)
set_target_properties(
	data_swap1.cpp
	PROPERTIES
	COMPILE_FLAGS
	"-g -flto"
	LINK_FLAGS
	"-flto"
)
set_target_properties(
	data_swap2.cpp
	PROPERTIES
	COMPILE_FLAGS
	"-g -flto"
	LINK_FLAGS
	"-flto"
)
set_target_properties(
	data_swap3.cpp
	PROPERTIES
	COMPILE_FLAGS
	"-g -flto"
	LINK_FLAGS
	"-flto"
)
set_target_properties(
	double_or.cpp
	PROPERTIES
	COMPILE_FLAGS
	"-g -flto"
	LINK_FLAGS
	"-flto"
)
set_target_properties(
	double_thresh
	PROPERTIES
	COMPILE_FLAGS
	"-g -flto"
	LINK_FLAGS
	"-flto"
)
set_target_properties(
	flag_set
	PROPERTIES
	COMPILE_FLAGS
	"-g -flto"
	LINK_FLAGS
	"-flto"
)
set_target_properties(
	func_call
	PROPERTIES
	COMPILE_FLAGS
	"-g -flto"
	LINK_FLAGS
	"-flto"
)
set_target_properties(
	node_class
	PROPERTIES
	COMPILE_FLAGS
	"-g -flto"
	LINK_FLAGS
	"-flto"
)
